--- a/src/sass/abstracts/variables.scss
+++ b/src/sass/abstracts/variables.scss
@@ -27,7 +27,7 @@ $dark-grey: #716d6a;
 $subtle-grey: #f6f6f6;
 
 $color-text: #000000;
-$background: #ffffff;
+$bg1: #ffffff;
 $body-background: #f8f7f5;
 $scrollbar-thumb: #cecece;
 
