--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,7 @@
 @import "./abstracts/variables.scss";
 @import "./abstracts/mixins.scss";
 @import "./abstracts/main.scss";
+
+@import "./burger-menu.scss";
+@import "./header.scss";
+@import "./logo.scss";
