--- a/src/sass/burger-menu.scss
+++ b/src/sass/burger-menu.scss
@@ -1,18 +1,21 @@
 .burger-menu {
-  display: block;
-  padding: 20px 10px;
+  position: relative;
+  display: grid;
+  place-items: center;
+  width: 30px;
+  height: 20px;
   background-color: transparent;
   border: 0;
   cursor: pointer;
+  z-index: 2000;
 
   &:focus {
     outline: none;
   }
   
   span {
-    position: relative;
-    display: block;
-    width: 30px;
+    display: inline-block;
+    width: 100%;
     height: 4px;
     background: #222;
     border-radius: 2px;
@@ -22,7 +25,7 @@
       position: absolute;
       background: #222;
       content: '';
-      width: 30px;
+      width: 100%;
       height: 4px;
       border-radius: 2px;
       transition: all .2s ease-in-out;
@@ -30,12 +33,12 @@
     
     &:before {
       left: 0;
-      top: -8px;
+      top: 0;
     }
     
     &:after {
       left: 0;
-      top: 8px;
+      bottom: 0;
     }
   }
 }
