--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,12 +1,22 @@
 .header {
-  min-height: 45px;
   display: grid;
-  grid-template-columns: 100px auto 100px;
+  grid-template-columns: 60px auto 60px;
+  min-height: 45px;
+  padding: 0 $padding-mobile;
   align-items: center;
   background-color: $bg1;
 
-  .logo {
+  &__logo {
     display: flex;
     justify-content: center;
+  }
+
+  &__burger-btn {
+    display: flex;
+  }
+
+  &__user-group {
+    display: flex;
+    justify-content: space-between;
   }
 }
