--- a/src/sass/abstracts/variables.scss
+++ b/src/sass/abstracts/variables.scss
@@ -15,20 +15,23 @@ $regular: 400;
 $semibold: 600;
 $bold: 700;
 $extrabold: 800;
-$black: 900;
 
 // Colors
 $white: #ffffff;
-$black: #000000;
+$black: #333333;
 $accent: #ffbf00;
 $green: #4caf50;
 $light-grey: #f2f2f2;
+$grey: #cecece;
 $dark-grey: #716d6a;
 $subtle-grey: #f6f6f6;
 
+$black-06: rgba(0,0,0, 0.6);
+$black-02: rgba(0,0,0, 0.2);
+
 $color-text: #000000;
 $bg1: #ffffff;
-$body-background: #f8f7f5;
+$body-background: #eeeeee;
 $scrollbar-thumb: #cecece;
 
 // Other
