--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,7 +2,19 @@
 @import "./abstracts/mixins.scss";
 @import "./abstracts/main.scss";
 
+@import "./account.scss";
 @import "./burger-menu.scss";
 @import "./header.scss";
+@import "./home-page.scss";
+@import "./ingredients.scss";
 @import "./logo.scss";
+@import "./menu.scss";
+@import "./menu-card.scss";
+@import "./menu-filter.scss";
+@import "./menu-nav.scss";
+@import "./menu-new.scss";
 @import "./navigation.scss";
+@import "./nutrition.scss";
+@import "./overflow-menu.scss";
+@import "./sign-in.scss";
+@import "./showinfo.scss";
