--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -2,19 +2,18 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 80%;
+  width: 100%;
   height: 100%;
   padding: 150px $padding-mobile 0;
   color: $color-text;
   background-color: $bg1;
-  box-shadow: 0px 0px 20px rgba($black, 0.3);
   overflow: hidden;
   z-index: 10;
-  transform: translateX(-100%);
+  transform: translateY(-100%);
   transition: transform 0.3s ease-in-out;
 
   &.open {
-    transform: translateX(0);
+    transform: translateY(0);
   }
 
   &__overlay {
