--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,6 +1,9 @@
 .header {
+  position: fixed;
+  width: 100%;
   background-color: $bg1; 
   z-index: 100;
+  box-shadow: $box-shadow;
 
   &__wrapper {
     display: grid;
