--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import "./abstracts/main.scss";
 
 @import "./account.scss";
+@import "./basket.scss";
 @import "./burger-menu.scss";
 @import "./header.scss";
 @import "./home-page.scss";
@@ -16,5 +17,7 @@
 @import "./navigation.scss";
 @import "./nutrition.scss";
 @import "./overflow-menu.scss";
-@import "./sign-in.scss";
 @import "./showinfo.scss";
+@import "./sign-in.scss";
+@import "./stepper.scss";
+@import "./success.scss";
