--- a/src/sass/menu-card.scss
+++ b/src/sass/menu-card.scss
@@ -1,5 +1,4 @@
 .menu-card {
-  position: relative;
   display: flex;
   flex-direction: column;
   background-color: $white;
@@ -9,10 +8,17 @@
     width: 100%;
     height: 240px;
     object-fit: cover;
+    
   }
 
   &__content {
     padding: 20px 20px 10px;
+    min-height: 1px;
+    transition: all ease-in-out 0.3s;
+
+    &--info {
+      min-height: 300px;
+    }
   }
 
   &__item-type {
@@ -78,71 +84,9 @@
     }
   }
 
-  &__stepper {
-    display: flex;
-    margin-right: 30px;
-
-    &--increase,
-    &--decrease {
-      display: grid;
-      place-items: center;
-      width: 45px;
-      height: 45px;
-      background-color: $white;
-      border: 1px solid $grey;
-      cursor: pointer;
-
-      span {
-        display: block;
-        width: 24px;
-        height: 24px;
-        fill: $dark-grey;
-      }
-
-      &:hover {
-        background-color: $light-grey;
-      }
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    &--decrease {
-      border-right: 0;
-      border-top-left-radius: 20px;
-      border-bottom-left-radius: 20px;
-    }
-    &--increase {
-      border-left: 0;
-      border-top-right-radius: 20px;
-      border-bottom-right-radius: 20px;
-    }
-
-    input {
-      width: 45px;
-      height: 45px;
-      font-family: $font-secondary;
-      font-size: $font-size-xl;
-      font-weight: $semibold;
-      text-align: center;
-      border: 0;
-      border-top: 1px solid $grey;
-      border-bottom: 1px solid $grey;
-
-      &:focus {
-        outline: none;
-      }
-    }
-  }
-
   &__addtocart {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
-  }
-
-  &__nutrition {
     margin-bottom: 20px;
   }
 }
