--- a/src/sass/menu-filter.scss
+++ b/src/sass/menu-filter.scss
@@ -1,7 +1,11 @@
 .menu-filter {
+  position: fixed;
   width: 100%;
+  height: 45px;
+  margin-top: calc(45px + 45px);
   color: $black;
   background-color: $bg1;
+  box-shadow: $box-shadow;
 
   &__wrapper {
     width: 100%;
@@ -21,13 +25,21 @@
     min-height: 45px;
     font-size: $font-size-medium;
 
-    p {
+    button {
       padding: 5px 15px;
+      font: inherit;
+      text-transform: capitalize;
+      background-color: transparent;
+      border: 0;
+      cursor: pointer;
+
+      &:focus {
+        outline: none;
+      }
     }
 
     &--active {
-      p {
-        padding: 5px 15px;
+      button {
         background-color: $accent;
         border-radius: 20px;
       }
