--- a/src/sass/menu.scss
+++ b/src/sass/menu.scss
@@ -5,6 +5,12 @@
 
   &__wrapper {
     padding: 0;
+    width: 100%;
+    margin-top: calc(45px * 3);
+  }
+
+  &__filter {
+    margin-bottom: 20px;
   }
 
   &__addnewitem {
@@ -16,7 +22,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 20px 0;
+      margin-top: 20px;
+      margin-bottom: 20px;
     }
 
     &-btn {
