--- a/src/sass/abstracts/variables.scss
+++ b/src/sass/abstracts/variables.scss
@@ -1,9 +1,9 @@
 // Font Families
 $font-family: 'Roboto', sans-serif;
-$font-secondary: 'Avenir Next Condensed';
+$font-secondary: 'Fira Sans Condensed', sans-serif;
 
 // Typography
-$font-size-xl: 20px;
+$font-size-xl: 22px;
 $font-size-large: 18px;
 $font-size-medium: 16px;
 $font-size-small: 14px;
