--- a/src/sass/menu-card.scss
+++ b/src/sass/menu-card.scss
@@ -3,12 +3,16 @@
   flex-direction: column;
   background-color: $white;
 
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
   &__image {
     display: block;
     width: 100%;
     height: 240px;
     object-fit: cover;
-    
+
   }
 
   &__content {
