--- a/src/sass/menu-nav.scss
+++ b/src/sass/menu-nav.scss
@@ -5,6 +5,7 @@
   max-height: 45px;
   color: $black;
   background-color: $accent;
+  z-index: 10;
 
   &__wrapper {
     width: 100%;
@@ -28,6 +29,11 @@
 
     &--active {
       box-shadow: inset 0 -3px 0 0 $black;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
     }
   }
 }
