--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -1,10 +1,11 @@
 .navigation {
   position: fixed;
+  display: grid;
+  place-items: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 150px $padding-mobile 0;
   color: $color-text;
   background-color: $bg1;
   overflow: hidden;
@@ -24,10 +25,13 @@
     @include list-reset;
     max-height: calc(100% - 45px);
     overflow: auto;
+    padding: 0 20px;
+    margin: 0 auto;
   }
 
   &__item {
     padding: 20px 0;
+    text-align: center;
   }
 
   &__link {
