--- a/src/sass/menu-card.scss
+++ b/src/sass/menu-card.scss
@@ -12,7 +12,12 @@
     width: 100%;
     height: 240px;
     object-fit: cover;
+    cursor: pointer;
+    transition: all 0.3s linear;
 
+    &--large {
+      height: 400px;
+    }
   }
 
   &__content {
