--- a/src/sass/home-page.scss
+++ b/src/sass/home-page.scss
@@ -11,6 +11,56 @@
     padding: 0 50px;
   }
 
+  &__logo {
+    transform: scale(2);
+    text-align: center;
+    margin-bottom: 10%;
+  }
+
+  &__text {
+    @include subtitle;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  &__signin {
+    margin-top: 30px;
+
+    p {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-bottom: 20px;
+
+      &:before {
+        position: absolute;
+        content: "";
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        width: 100%;
+        height: 1px;
+        background-color: $grey;
+      }
+    }
+
+    span {
+      @include subtitle;
+      display: block;
+      padding: 0 10px;
+      background-color: $bg1;
+      z-index: 1;
+    }
+  }
+
+  &__browsing {
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 15%;
+    border-radius: 20px;
+  }
+
   &__input {
     padding-left: 50px;
     border: 2px solid $accent;
@@ -34,7 +84,7 @@
 
   &__slogan {
     @include title;
-    margin: 50px 0;
+    margin: 70px 0 50px;
     text-align: center;
   }
 
@@ -54,10 +104,13 @@
 
   &__description {
     @include text;
+    margin: 0 auto;
 
     span {
       display: block;
       margin-bottom: 20px;
+      text-align: center;
+      line-height: 1.5em;
     }
   }
 }
